Implémentation de la fonctionnalité de simplification de l'affichage.

--- a/html/contact.html
+++ b/html/contact.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="stylesheet" href="../css/piedDePage.css">
     <link rel="stylesheet" href="../css/themeDyslexique.css">
+    <link rel="stylesheet" href="../css/themes.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
