--- a/html/projetsPersonnels.html
+++ b/html/projetsPersonnels.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/projetsPersonnels.css">
     <link rel="stylesheet" href="../css/piedDePage.css">
     <link rel="stylesheet" href="../css/themeDyslexique.css">
+    <link rel="stylesheet" href="../css/themes.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -25,11 +26,7 @@
         <!-- La taverne de bacchus -->
         <section class="container">
             <div class="photos-container">
-                <div class="photos">
-                    <div class="photo photo1"></div>
-                    <div class="photo photo2"></div>
-                </div>
-                <div class="photo photo3"></div>
+                <img src="../images/travailEnCours.png" class="photo photo1">
             </div>
             <div class="content">
                 <h1>La taverne de Bacchus</h1>
