--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/barreNavigation.css">
     <link rel="stylesheet" href="css/piedDePage.css">
     <link rel="stylesheet" href="css/themeDyslexique.css">
+    <link rel="stylesheet" href="css/themes.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
